# PICO-Emulator-common

./: .gitattributes  README.md
ANGLE/: BUILD.bazel  README
ANGLE/darwin-aarch64/lib/: libEGL.dylib  libGLESv1_CM.dylib
ANGLE/darwin-x86_64/lib/: libGLESv1_CM.dylib
ANGLE/patches/: 0001-Current-emulator-specific-ANGLE-modifications.patch  0002-Add-RGB888-support.patch  0003-Update-ANGLE-for-latest-emulator-sysimg-changes.patch  0004-ANGLE-stable-base-commit-id-9f09037b073a7481bc5d94984a26b7c9d3427b16.patch  base-commit-id
bluez/linux-x86_64/lib/: libbluetooth.la  libbluetooth.so.3.18.15  libdbus-1.la  libdbus-1.so.3.14.11  libexpat.la  libexpat.so.1.6.0  libform.so.6.0  libgio-2.0.la  libglib-2.0.la  libglib-2.0.so.0.3800.2  libgmodule-2.0.la  libgmodule-2.0.so.0.3800.2  libgobject-2.0.la  libgobject-2.0.so.0.3800.2  libgthread-2.0.la  libgthread-2.0.so.0.3800.2  libhistory.so.7.0  libmenu.so.6.0  libncurses.so.6.0  libpanel.so.6.0  libreadline.so.7.0
breakpad/windows_msvc-x86_64/lib/: common.lib  common_windows_lib.lib  crash_generation_client.lib  crash_generation_server.lib  crash_report_sender.lib  exception_handler.lib  libdisasm.lib
ciopfs/linux-x86_64/: ciopfs
e2fsprogs/linux-aarch64/lib/: e2initrd_helper
libnvidia/linux-x86_64/: readme
msvc/2019/: READ.MD
msvc/2022/: READ.MD
virglrenderer/: update-headers.sh
vulkan/: BUILD.bazel
vulkan/darwin-aarch64/layers/: VkLayer_api_dump.json  VkLayer_khronos_validation.json
vulkan/darwin-x86_64/: libSPIRV-Tools-shared.dylib
vulkan/windows-x86_64/: update_from_sdk.bat
(+253 files in other folders)
